crates/toml_edit/tests/snapshots/invalid/table/newline-03.stderr
TOML parse error at line 1, column 7
  |
1 | ["tbl"
  |       ^
unclosed table, expected `]`
